<resources>
    <string name="app_name">NDPSongs</string>
    <string name="songtitle">Song Title:</string>
    <string name="entersong">Enter song title </string>
    <string name="singers">Singer:</string>
    <string name="entersinger">Enter singer name </string>
    <string name="year">Year:</string>
    <string name="enteryear">Enter year of release </string>
    <string name="stars">Rating:</string>
    <string name="insert">Insert</string>
    <string name="showlist">Show List</string>
    <string name="showall">Show All 5 Stars Songs</string>

    <string name="app_name2">Demo Spinner App</string>
    <string name="Genre" />
    <string name="idsong" />
    <string name="four" />
    <string name="one" />
    <string name="three" />
    <string name="five" />
    <string name="update" />
    <string name="two" />
    <string name="cancel" />
    <string name="delete" />
    <string-array name="spinnerItems">
        <item>G</item>
        <item>PG</item>
        <item>PG13</item>
        <item>NC16</item>
        <item>M18</item>
        <item>R21</item>
    </string-array>
</resources>